--- a/TODO
+++ b/TODO
@@ -2,6 +2,14 @@
 
 X = for release 4.0alpha2
 
+	* ftnhatch: copy option: copy file to file area and put entry
+	  into files.bbs (standard hatch behavior).
+
+DONE.	* charset.c: integrate charset.h.latin1. #ifdef?
+
+	* ftnconfig: tool for reading stuff from FIDOGATE config files
+	  for shell/perl scripts.
+
 	* ftnpack: lock file for do_dirpack().
 
 	* ftn2rfc: bounce messages should include the complete FTN
