--- a/TODO
+++ b/TODO
@@ -1,6 +1,17 @@
 -*- Indented-Text -*-
 
-X = for release 4.0alpha2
+X = for release 4.0alpha3
+
+X	* rfc2ftn: use rfcaddr.c functions for rfc2ftn mail_sender() etc. and
+	  to replace the RFC parsing functions in rfcheader.c
+
+X	* rfc2ftn: check From, Reply-To for equal address, use real
+	  name in From header, if Reply-To is address only.
+
+	* ffxbatch: do nothing for empty batch directory.
+
+	* ftnroute: new command "xroute" allowing routing based on
+	  source *and* destination address.
 
 	* ftnhatch: copy option: copy file to file area and put entry
 	  into files.bbs (standard hatch behavior).
@@ -10,12 +21,12 @@ DONE.	* charset.c: integrate charset.h.latin1. #ifdef?
 	* ftnconfig: tool for reading stuff from FIDOGATE config files
 	  for shell/perl scripts.
 
-	* ftnpack: lock file for do_dirpack().
+X	* ftnpack: lock file for do_dirpack().
 
 	* ftn2rfc: bounce messages should include the complete FTN
 	  message with all kludges etc. to ease debugging.
 
-STARTED.* ftntoss: make "send" work as in SQUISH. Needs rewrite of
+DONE.	* ftntoss: make "send" work as in SQUISH. Needs rewrite of
 	  node string parsing functions and routing.c / ftnroute.c.
 
 	* config.h: ALIASES, AREAS, HOSTS, PASSWD, PACKING, ROUTING
@@ -24,7 +35,7 @@ STARTED.* ftntoss: make "send" work as in SQUISH. Needs rewrite of
 	* kludge.c: handling traversing multiple kludges of the same
 	  type.
 
-STARTED.* node.c, routing.c: merge node parsing functions into general
+DONE.	* node.c, routing.c: merge node parsing functions into general
 	  ones. parsenode.c
 
 	* ftnpack: runtime configuration of arcmail extension
@@ -56,9 +67,6 @@ DONE.	  copy netmail packets (do_noarc()), use rename(). If archiver
 rfc2ftn	* Support for new FIDO-Gatebau '94 ^ARFC kludges.
 DONE.
 	* Check packet passwords of incoming packets.
-
-	* Use rfcaddr.c functions for rfc2ftn mail_sender() etc. and
-	  to replace the RFC parsing functions in rfcheader.c
 
 	* MIME support for outgoing RFC messages, especially using the
 	  ISO-8859-1 character set (8 bit and MIME quoted printable)
