--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,34 @@
+Sun Jun  9 11:22:02 1996  Martin Junius  <mj@fido.de>
+
+	------- CVS commit ---------------------------------------------------
+
+	* src/common/flo.c (flo_mark): new function writing '~' to
+	  beginning of entry line last read, marking the entry as sent.
+	  (flo_close): new parameter del. If TRUE, remove FLO file before
+	  closing.
+
+	* src/common/config.c (cf_dos_xlate): use BUF_COPY2().
+	  (cf_unix_xlate): new function converting MSDOS path back to UNIX
+	  path.
+
+	* src/common/flo.c (flo_gets): new function reading entry line
+	  from FLO file and setting flo_off_cur, flo_off_next offsets.
+	  (flo_close): new function closing FLO file and removing BSY file.
+
+Sat Jun  8 22:38:26 1996  Martin Junius  <mj@fido.de>
+
+	* src/common/Makefile (OBJS): add flo.o
+
+	* src/common/flo.c: new module, function for handling
+	  BinkleyTerm-style FLO files.
+	  (flo_open): new function opens, locks *existing* FLO file, and
+	  create BSY file for node.
+
 Thu Jun  6 15:13:16 1996  Martin Junius  <mj@fido.de>
+
+	* scripts/Makefile (install): target doesn't do anything in the
+	  subdirs. Use make install in the individual subdirs, if you want
+	  to install some of the utility scripts.
 
 	------- CVS commit ---------------------------------------------------
 
