--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,19 @@
+Mon Jun 10 19:51:47 1996  Martin Junius  <mj@fido.de>
+
+	------- CVS tag r40alpha2c -------------------------------------------
+
+	------- CVS commit ---------------------------------------------------
+
+	* src/util/Makefile (PROGS): added ftnflo program.
+
+	* src/util/ftnflo.c: new utility to run script for every entry in
+	  FLO file for a node, e.g. to send files via mail or ftp.
+
+	* scripts/run/runpoll.sh: run sendmail -q after gateway.
+
 Sun Jun  9 11:22:02 1996  Martin Junius  <mj@fido.de>
+
+	------- CVS tag r40alpha2b -------------------------------------------
 
 	------- CVS commit ---------------------------------------------------
 
