--- a/TODO
+++ b/TODO
@@ -2,74 +2,43 @@
 
 X = for release 4.0alpha3
 
-	* test/tc.tick: test case for ftntick (Replaces).
+	* rfc2ftn: better parsing of first line, don't use RFCAddr
+	  parser.
+
+	* rfc2ftn: handle MIME RFC1523 header
+
+X	* test/tc.gate5: test case for rfc2ftn, mail
+
+X	* test/tc.tick: test case for ftntick (Replaces)
 
 	* msg_body_parse(): there may be ^AVia in the kludges at the
 	  beginning of the messages!
 
-DONE.	* ftntick: integrate patches from Sholto Douglas.
-
 	* ftntick: remove FILES.BBS entry for old replaced file.
-
-DONE.	* rununpack: use separate magic data file for the file
-	  command, avoiding problems with having to change
-	  /usr/lib/magic.
 
 	* ftntick: if node is busy, put necessary data for
 	  bink_attach() into separate file, don't wait, retry on the
 	  next run.
 
-DONE.	* ftnaf: command line mode must override level/key, right now
-	  level/key are checked but not set.
-
-DONE.	* ftnexpire: log busy, wait for lock file to be released
-
-DONE.   * ftntoss: log dupe MSGIDs
-
-DONE.   * ftntick: set file date after moving to file area
-
-DONE.	* pktdebug: option to disable ^M^J output
-
-DONE.	* wildmat.c:wildmatch():L181: fix case sensitivity for [a-z]
-	  ranges.
-
 	* ftnpack: remove 0-size arcmail from previous days.
 	
-X	* rfc2ftn: use rfcaddr.c functions for rfc2ftn mail_sender() etc. and
-	  to replace the RFC parsing functions in rfcheader.c
-
-X	* rfc2ftn: check From, Reply-To for equal address, use real
-	  name in From header, if Reply-To is address only.
-
-DONE.	* ffxbatch: do nothing for empty batch directory.
-
 	* ftnroute: new command "xroute" allowing routing based on
 	  source *and* destination address.
 
 	* ftnhatch: copy option: copy file to file area and put entry
 	  into files.bbs (standard hatch behavior).
 
-DONE.	* charset.c: integrate charset.h.latin1. #ifdef?
-
 	* ftnconfig: tool for reading stuff from FIDOGATE config files
 	  for shell/perl scripts.
 
-DONE.	* ftnpack: lock file for do_dirpack().
-
 	* ftn2rfc: bounce messages should include the complete FTN
 	  message with all kludges etc. to ease debugging.
-
-DONE.	* ftntoss: make "send" work as in SQUISH. Needs rewrite of
-	  node string parsing functions and routing.c / ftnroute.c.
 
 	* config.h: ALIASES, AREAS, HOSTS, PASSWD, PACKING, ROUTING
 	  configurable in config.common
 
 	* kludge.c: handling traversing multiple kludges of the same
 	  type.
-
-DONE.	* node.c, routing.c: merge node parsing functions into general
-	  ones. parsenode.c
 
 	* ftnpack: runtime configuration of arcmail extension
 	  usage. Use XX0-9 only, XX0-9 + XXA-F, wrap around to XX0 if
