--- a/TODO
+++ b/TODO
@@ -2,6 +2,10 @@
 
 X = for release 4.0alpha4
 
+	* ftn2rfc: process ^ARFC headers. If RFC level 1, import
+	  important headers such as Date, Message-ID. If RFC level 2,
+	  import all headers present.
+
 	* Remove old MSGID processing code.
 
 	* ftnflo: pipe to program processing the entries (e.g. send
@@ -64,8 +68,6 @@ MOSTLY	* ftnpack: better file attach processing, -F DIR option. Don't
 DONE.	  copy netmail packets (do_noarc()), use rename(). If archiver
 	  fails, move packets back to toss/out directory.
 
-rfc2ftn	* Support for new FIDO-Gatebau '94 ^ARFC kludges.
-DONE.
 	* Check packet passwords of incoming packets.
 
 	* MIME support for outgoing RFC messages, especially using the
