--- a/TODO
+++ b/TODO
@@ -2,11 +2,14 @@
 
 X = for release 4.0alpha4
 
+ALPHA4	* rfc2ftn: config "UseOrganizationForOrigin", putting
+	  Organization header line into Fido * Origin.
+
 	* ftn2rfc: process ^ARFC headers. If RFC level 1, import
 	  important headers such as Date, Message-ID. If RFC level 2,
 	  import all headers present.
 
-	* Remove old MSGID processing code.
+ALPHA4	* Remove old MSGID processing code.
 
 	* ftnflo: pipe to program processing the entries (e.g. send
  	  with FTP)
@@ -14,7 +17,7 @@ X = for release 4.0alpha4
 	* rfc2ftn: better parsing of first line, don't use RFCAddr
 	  parser.
 
-	* rfc2ftn: handle MIME RFC1523 header
+ALPHA4	* rfc2ftn: handle MIME RFC1523 header
 
 	* ftntick: remove FILES.BBS entry for old replaced file.
 
@@ -36,7 +39,7 @@ X = for release 4.0alpha4
 	* ftn2rfc: bounce messages should include the complete FTN
 	  message with all kludges etc. to ease debugging.
 
-	* config.h: ALIASES, AREAS, HOSTS, PASSWD, PACKING, ROUTING
+ALPHA4	* config.h: ALIASES, AREAS, HOSTS, PASSWD, PACKING, ROUTING
 	  configurable in config.common
 
 	* kludge.c: handling traversing multiple kludges of the same
