--- a/test/tc.gate4/config.2
+++ b/test/tc.gate4/config.2
@@ -1,10 +1,11 @@
 #
-# $Id: config.2,v 1.1 1996/04/26 08:41:43 mj Exp $
+# $Id: config.2,v 1.2 1996/08/26 19:10:36 mj Exp $
 #
-# Test config.gate with RFCLevel 2
+# Test config.gate with RFCLevel 2, UseOrganizationForOrigin
 #
 
 # *first* match is used!
 RFCLevel 2
+UseOrganizationForOrigin
 
 include %L/config.gate
