--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Aug 29 21:00:26 1996  Martin Junius  <mj@fido.de>
+
+	------- CVS tag r40alpha3 --------------------------------------------
+
+	------- CVS commit ---------------------------------------------------
+
 Wed Aug 28 22:54:25 1996  Martin Junius  <mj@fido.de>
 
 	------- CVS commit ---------------------------------------------------
