--- a/TODO
+++ b/TODO
@@ -2,27 +2,20 @@
 
 X = for release 4.0alpha4
 
+	* ftn2rfc: rewrite, split huge unpack() function into parts
+	  for processing netmail and echomail.
+
 	* ftnroute: crash mails to points via boss node.
-
-DONE.	* ftn2rfc: config "NoAddressInToField", inhibit '%', '!', '@' char
-	  in Fido to field.
-
-DONE.	* rfc2ftn: config "UseOrganizationForOrigin", putting
-	  Organization header line into Fido * Origin.
 
 	* ftn2rfc: process ^ARFC headers. If RFC level 1, import
 	  important headers such as Date, Message-ID. If RFC level 2,
 	  import all headers present.
-
-DONE.	* Remove old MSGID processing code.
 
 	* ftnflo: pipe to program processing the entries (e.g. send
  	  with FTP)
 
 	* rfc2ftn: better parsing of first line, don't use RFCAddr
 	  parser.
-
-DONE.	* rfc2ftn: handle MIME RFC1523 header
 
 	* ftntick: remove FILES.BBS entry for old replaced file.
 
@@ -44,9 +37,6 @@ DONE.	* rfc2ftn: handle MIME RFC1523 header
 	* ftn2rfc: bounce messages should include the complete FTN
 	  message with all kludges etc. to ease debugging.
 
-DONE.	* config.h: ALIASES, AREAS, HOSTS, PASSWD, PACKING, ROUTING
-	  configurable in config.common
-
 	* kludge.c: handling traversing multiple kludges of the same
 	  type.
 
@@ -61,8 +51,6 @@ DONE.	* config.h: ALIASES, AREAS, HOSTS, PASSWD, PACKING, ROUTING
 
 	* areas: option -M MAXSIZE, limit maximum RFC message size to
 	  MAXSIZE bytes, larger messages won't be gated.
-
-	* areas.bbs: area descriptions, -d "Text ...".
 
 	* ftn2rfc: restrict gateway to certain *Internet* addresses.
 
